<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <com.google.android.material.textfield.TextInputLayout
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signInMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:hint="@string/sign_in_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signInPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:hint="@string/sign_in_pass" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/registerButton"
            android:text="@string/sign_in_register"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="10dp"
            android:textColor="#FFFF"
            android:background="@color/colorAccent"/>
    </LinearLayout>

</LinearLayout>